refactor-city, lots o' red

--- a/engine/ivy.xml
+++ b/engine/ivy.xml
@@ -107,6 +107,7 @@
     <dependency org="javax.mail"                       name="mail"                 rev="1.4.7"           transitive="false" />
     <dependency org="org.mnode.mstor"                  name="mstor"                rev="0.9.13"          transitive="false"/>
     <dependency org="org.xerial.snappy"                name="snappy-java"          rev="1.1.0"           transitive="true"/>
+    <dependency org="com.clearspring.analytics"        name="stream"               rev="2.7.0"           transitive="false"/>
     
 
     
