--- a/dbdialog/build.properties
+++ b/dbdialog/build.properties
@@ -1,5 +1,5 @@
 #System Properties
-dependency.kettle.revision=TRUNK-SNAPSHOT
+dependency.kettle.revision=DATA-PROFILING-SNAPSHOT
 ivy.artifact.id=kettle-dbdialog
 ivy.artifact.group=pentaho-kettle
 version=TRUNK-SNAPSHOT
