updating dbdialog version

--- a/dbdialog/build.properties
+++ b/dbdialog/build.properties
@@ -2,7 +2,7 @@
 dependency.kettle.revision=DATA-PROFILING-SNAPSHOT
 ivy.artifact.id=kettle-dbdialog
 ivy.artifact.group=pentaho-kettle
-version=TRUNK-SNAPSHOT
+version=DATA-PROFILING-SNAPSHOT
 project.revision=${version}
 impl.vendor=Pentaho Corporation
 impl.version=${version}
