--- a/assembly/build.properties
+++ b/assembly/build.properties
@@ -11,6 +11,7 @@ lib.zip.filename=lib.zip
 
 # Dependency revisions
 dependency.kettle.revision=${project.revision}
+dependency.kettle.plugin.revision=TRUNK-SNAPSHOT
 dependency.mondrian.revision=TRUNK-SNAPSHOT
 dependency.pentaho-metadata.revision=TRUNK-SNAPSHOT
 dependency.pentaho-connections.revision=TRUNK-SNAPSHOT
