--- a/assembly/ivy.xml
+++ b/assembly/ivy.xml
@@ -43,6 +43,9 @@
     <dependency org="${ivy.artifact.group}" name="kettle5-log4j-plugin" rev="${dependency.kettle.plugin.revision}" changing="true" conf="plugins->default">
         <artifact name="kettle5-log4j-plugin" type="zip"/>
     </dependency>
+    <dependency org="pentaho" name="pentaho-kettle-karaf-plugin" rev="${project.revision}" changing="true" conf="plugins->default">
+        <artifact name="pentaho-kettle-karaf-plugin" type="zip"/>
+    </dependency>
     
     <!-- Pentaho dependencies (non-Kettle), launcher, shim, etc. -->
     <dependency org="pentaho"               name="pentaho-application-launcher"  rev="${dependency.launcher.revision}" conf="launcher->default"/>
