--- a/assembly/ivy.xml
+++ b/assembly/ivy.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ivy-module version="2.0">
+<ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
   <info organisation="${ivy.artifact.group}" module="${ivy.artifact.id}" revision="${project.revision}" />
   <configurations>
     <conf name="default" />
@@ -43,8 +43,8 @@
     <dependency org="${ivy.artifact.group}" name="kettle5-log4j-plugin" rev="${dependency.kettle.plugin.revision}" changing="true" conf="plugins->default">
         <artifact name="kettle5-log4j-plugin" type="zip"/>
     </dependency>
-    <dependency org="pentaho" name="pdi-osgi-bridge" rev="${dependency.kettle.plugin.revision}" changing="true" conf="plugins->default">
-        <artifact name="pdi-osgi-bridge-package" type="zip"/>
+    <dependency org="pentaho" name="pdi-osgi-bridge" rev="${dependency.kettle.plugin.revision}" changing="true" transitive="false" conf="plugins->default">
+        <artifact name="pdi-osgi-bridge" m:classifier="package" type="zip"/>
     </dependency>
     
     <!-- Pentaho dependencies (non-Kettle), launcher, shim, etc. -->
