--- a/assembly/ivy.xml
+++ b/assembly/ivy.xml
@@ -43,7 +43,7 @@
     <dependency org="${ivy.artifact.group}" name="kettle5-log4j-plugin" rev="${dependency.kettle.plugin.revision}" changing="true" conf="plugins->default">
         <artifact name="kettle5-log4j-plugin" type="zip"/>
     </dependency>
-    <dependency org="pentaho" name="pdi-osgi-bridge" rev="${dependency.kettle.plugin.revision}" changing="true" transitive="false" conf="plugins->default">
+    <dependency org="pentaho" name="pdi-osgi-bridge" rev="1.0-SNAPSHOT" changing="true" transitive="false" conf="plugins->default">
         <artifact name="pdi-osgi-bridge" m:classifier="package" type="zip"/>
     </dependency>
     
